fix java 20 deprecation : new URL("") -> new URI("").toURL()