@@ -2895,7 +2895,7 @@ public class Broadcast extends javax.swing.JFrame implements SIPClientInterface,
   public void checkVersion() {
     try {
       BufferedReader reader = new BufferedReader(new InputStreamReader(
-        new URL("http://jfbroadcast.sourceforge.net/version.php").openStream()));
+        new URI("http://jfbroadcast.sourceforge.net/version.php").toURL().openStream()));
       String line = reader.readLine();
       if (line.equals(version)) {JFLog.log("version is up-to-date"); return;}
       JFLog.log("newer version is available : " + line);
